--- a/src/pages/modals/server/edit/edit.html
+++ b/src/pages/modals/server/edit/edit.html
@@ -1,55 +1,55 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      {{ 'SERVER.EDIT' | translate}}
-    </ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="dismiss()">
+    <ion-toolbar>
+        <ion-title>
+            {{ 'SERVER.EDIT' | translate}}
+        </ion-title>
+        <ion-buttons start>
+            <button ion-button (click)="dismiss()">
         <span ion-text="primary">{{ 'GENERIC.CANCEL' | translate }}</span>
       </button>
-    </ion-buttons>
-  </ion-toolbar>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form class="list" [formGroup]="newServer" (ngSubmit)="save()">
-    <ion-list>
+    <form class="list" [formGroup]="newServer" (ngSubmit)="save()">
+        <ion-list>
 
-      <ion-item>
-        <ion-label stacked>{{ 'GENERIC.NAME' | translate }}</ion-label>
-        <ion-input formControlName="name" type="text" placeholder="Name" readonly></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label stacked>{{ 'GENERIC.NAME' | translate }}</ion-label>
+                <ion-input formControlName="name" type="text" placeholder="Name" readonly></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label stacked>{{ 'SERVER.TOKEN' | translate }}</ion-label>
-        <ion-input type="password" formControlName="token"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label stacked>{{ 'SERVER.TOKEN' | translate }}</ion-label>
+                <ion-input type="password" formControlName="token"></ion-input>
+            </ion-item>
 
-      <ion-item>
-        <ion-label stacked>URL</ion-label>
-        <ion-input formControlName="url" type="text" placeholder="https://mylibrenms.server"></ion-input>
-      </ion-item>
+            <ion-item>
+                <ion-label stacked>URL</ion-label>
+                <ion-input formControlName="url" type="text" placeholder="https://librenms.server"></ion-input>
+            </ion-item>
 
-      <div formGroupName="basic">
-        <ion-item>
-          <ion-label>{{ 'AUTH.BASIC' | translate }}</ion-label>
-          <ion-checkbox formControlName="enabled"></ion-checkbox>
-        </ion-item>
-      
-        <ion-item *ngIf="newServer.value.basic.enabled">
-          <ion-label stacked>{{ 'AUTH.USERNAME' | translate }}</ion-label>
-          <ion-input formControlName="username" type="text"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="newServer.value.basic.enabled">
-          <ion-label stacked>{{ 'AUTH.PASSWORD' | translate }}</ion-label>
-          <ion-input formControlName="password" type="text"></ion-input>
-        </ion-item>
-      </div>
+            <div formGroupName="basic">
+                <ion-item>
+                    <ion-label>{{ 'AUTH.BASIC' | translate }}</ion-label>
+                    <ion-checkbox formControlName="enabled"></ion-checkbox>
+                </ion-item>
 
-      <button ion-button full type="submit" [disabled]="!newServer.valid" color="favorite">{{ 'GENERIC.SAVE' | translate }}</button>
+                <ion-item *ngIf="newServer.value.basic.enabled">
+                    <ion-label stacked>{{ 'AUTH.USERNAME' | translate }}</ion-label>
+                    <ion-input formControlName="username" type="text"></ion-input>
+                </ion-item>
+                <ion-item *ngIf="newServer.value.basic.enabled">
+                    <ion-label stacked>{{ 'AUTH.PASSWORD' | translate }}</ion-label>
+                    <ion-input formControlName="password" type="text"></ion-input>
+                </ion-item>
+            </div>
 
-    </ion-list>
-  </form>
-  <button ion-button full color="danger" (click)="remove()">{{ 'GENERIC.REMOVE' | translate }}</button>
+            <button ion-button full type="submit" [disabled]="!newServer.valid" color="favorite">{{ 'GENERIC.SAVE' | translate }}</button>
+
+        </ion-list>
+    </form>
+    <button ion-button full color="danger" (click)="remove()">{{ 'GENERIC.REMOVE' | translate }}</button>
 
 </ion-content>
